[tool.poetry]
name = "spp-logger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pytz = "^2020.4"
immutables = "^0.14"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"
coverage = "^5.3"
flake8 = "^3.8.4"
pytest-mock = "^3.3.1"
freezegun = "^1.0.0"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
