[tool.poetry]
name = "spp-logger"
version = "1.0.6"
description = ""
authors = ["Ian Dash <ian.dash@ons.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.13"
pytz = "^2024.1"
immutables = "^0.21"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^24"
mypy = "^1.9"
isort = "^5.13"
coverage = "^5.3"
flake8 = "^7"
pytest-mock = "^3.12"
freezegun = "^1.4.0"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
